# car-rental-data-pipeline

./: .gitignore  README.md  pyproject.toml  runbook.md
dbt/: .user.yml  profiles.yml
dbt/car_rental_dbt/: dbt_project.yml
dbt/car_rental_dbt/models/marts/: _marts_models.yml  mart_branch_performance.sql  mart_daily_revenue.sql  mart_vehicle_utilization.sql
dbt/car_rental_dbt/models/staging/: _sources.yml  _staging_models.yml  stg_branches.sql  stg_customers.sql  stg_payments.sql  stg_rentals.sql  stg_vehicles.sql
src/car_rental_data_pipeline/: check_warehouse.py  prepare_raw_data.py  run_pipeline.py
src/car_rental_gcp_data_platform/: generate_transactions.py  load_to_duckdb.py  run_pipeline.py
