[project]
name = "car-rental-gcp-data-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Xranitel",email = "xranitel13@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "duckdb (>=1.5.3,<2.0.0)",
    "dbt-duckdb (>=1.10.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "car_rental_gcp_data_platform", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
