[project]
name = "car-rental-data-pipeline"
version = "0.1.0"
description = "Local car rental data pipeline using Python, DuckDB and dbt"
authors = [
    {name = "Xranitel"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "duckdb (>=1.5.3,<2.0.0)",
    "dbt-duckdb (>=1.10.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "car_rental_data_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"